Fix Overflow-x-hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,6 +58,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
 
 html {
